--- a/Calculator/package.json
+++ b/Calculator/package.json
@@ -9,6 +9,7 @@
   "author": "Rohit kumar samad",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
